[project]
name = "comfyui-prompt-combinator"
description = "'🔢 Prompt Combinator' is a node that generates all possible combinations of prompts from several lists of strings.\n'🔢 Prompt Combinator Merger' is a node that enables merging the output of two different '🔢 Prompt Combinator' nodes."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/lquesada/ComfyUI-Prompt-Combinator"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-Prompt-Combinator"
Icon = ""
